# poetry-plugin-compose

./: .envrc  .gitignore  README.md  TODO.md  index.html  pyproject.toml
doc/: mkdocs.yml  pyproject.toml
doc/docs/: commands.md  index.md
doc/site/: 404.html  index.html
doc/site/commands/: index.html
doc/site/search/: search_index.json
plugin/: README.md  pyproject.toml
plugin/poetry_plugin_compose/: compose_command.py  plugin.py
plugin/poetry_plugin_compose/composed_commands/: composed_add_command.py  composed_build_command.py  composed_check_command.py  composed_command.py  composed_command_utils.py  composed_install_command.py  composed_lock_command.py  composed_publish_command.py  composed_remove_command.py  composed_run_command.py  composed_update_command.py  dependency_order_command.py  discover_packages.py  package_filter.py  run_sub_command.py  sub_command_runner.py  sub_package_has_dependency.py
plugin/poetry_plugin_compose/toposort/: graph.py
plugin/tests/: test_smoke.py  test_split_commands.py
plugin/tests/composed_commands/: test_discover_packages.py
plugin/tests/toposort/: test_graph.py
scripts/: deploy.sh  generate_doc.py  install.sh  pyproject.toml  reinstall.sh  uninstall.sh
search/: search_index.json
testproject/: pyproject.toml
