[tool.poetry]
name = "poetry-plugin-compose"
version = "0.1.0"
description = ""
authors = ["Max <maximilienlarue@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_plugin_compose"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
