[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Max <maximilienlarue@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
poetry-plugin-compose = {path = "../plugin", develop = true}
mako = "^1.2.4"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
